# lean-rust

./: .dockerignore  .gitignore  Cargo.toml  Makefile  PR_SUMMARY.md  README.md  issue-12-summary.md  issue-13-pr-summary.md  protocol-cleanup-summary.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/beacon/: Cargo.toml
crates/beacon/src/: cli.rs  genesis.rs  keygen.rs  lib.rs  main.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: devnet0.rs  lib.rs
crates/config/tests/: devnet0_yaml.rs
crates/config/tests/data/: devnet0.yaml
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  key_state.rs  lib.rs  record.rs  scheme.rs  sign.rs  verify.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  importer.rs  lib.rs  results.rs  test_fixtures.rs
crates/fixtures/: .env.example  Cargo.toml  Dockerfile  README.md  config.yaml
crates/fixtures/config/keys/: .gitkeep  node0.key  node1.key
crates/fixtures/genesis/: bootnodes.rust.yaml  config.yaml  genesis.json  genesis.ssz  lean-rust-devnet0.yaml  nodes.yaml  validator-config.yaml  validators.yaml
crates/fixtures/logs/: .gitkeep
crates/fixtures/metrics/: pq-devnet-0-metrics.md
crates/fixtures/scripts/core/: check-cleanup.sh  cleanup.sh  compare-vote-checkpoints.sh  docker-compose.yml  quick-start.sh  setup-genesis.sh  smoke-head-sample.sh  status.sh
crates/fixtures/src/: lib.rs  stf.rs  storage.rs
crates/fixtures/tests/: compatibility_contract.rs  debug_summary.rs  vote_checkpoint_compare.rs
crates/fixtures/tests/fixtures/: README.md  bootnodes-rust-2node.yaml  genesis-2node.ssz.hex  node1-secp256k1.key
crates/forkchoice/: Cargo.toml  README.md
crates/forkchoice/benches/: vote_pool.rs
crates/forkchoice/src/: error.rs  helpers.rs  lib.rs  production.rs  store.rs  test_fixtures.rs  time.rs
crates/forkchoice/tests/: parity.rs
crates/lean-cli/: Cargo.toml  README.md
crates/lean-cli/src/: cli.rs  genesis.rs  keygen.rs  lib.rs  validator_keygen.rs
crates/networking/: Cargo.toml  README.md
crates/networking/examples/: regen_synthetic.rs
crates/networking/src/: codecs.rs  config.rs  error.rs  frames.rs  gossipsub.rs  lib.rs  messages.rs  protocol_ids.rs  topics.rs
crates/networking/tests/: messages.rs  parity.rs
crates/networking/tests/data/: PROVENANCE.md  gossipsub.json  messages.json
crates/node/: Cargo.toml  README.md
crates/node/src/: consensus_loop.rs  devnet.rs  gossip_ingest.rs  lib.rs  publisher_adapter.rs  rpc_provider.rs
crates/node/tests/fixtures/: single_node_validators.yaml
crates/observability/: Cargo.toml  README.md
crates/observability/src/: init.rs  lib.rs
crates/observability/tests/: integration.rs  race.rs
crates/pq-devnet-0/: .env.example  Cargo.toml  Dockerfile
crates/pq-devnet-0/genesis/: .gitkeep
crates/pq-devnet-0/scripts/core/: .gitkeep  build-lean-rust.sh  check-cleanup.sh  check-genesis-time.sh  debug-summary.sh  devnet-paths.sh  docker-compose.yml  quick-start.sh  setup-genesis.sh  smoke-head-sample.sh  status.sh
crates/pq-devnet-0/src/: lib.rs
crates/pq-devnet-0/tests/: compatibility_contract.rs  debug_summary.rs
crates/pq-devnet-0/tests/fixtures/: README.md  node0-secp256k1.key  validators-2node.yaml
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: block.rs  checkpoint.rs  error.rs  internal.rs  lib.rs  ream.rs  slot.rs  state.rs  state_transition.rs  stf.rs  test_fixtures.rs  validator.rs  vote.rs
crates/protocol/src/transition/: attestations.rs  blocks.rs  justifications.rs  mod.rs  slots.rs
crates/protocol/tests/: state_field_parity.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/api/: Cargo.toml  README.md
crates/runtime/api/src/: lib.rs  server.rs
crates/runtime/api/tests/: http.rs  httpsvc.rs  metrics.rs
crates/runtime/benches/: engine_import.rs  local_proposer.rs
crates/runtime/chain/: Cargo.toml  README.md
crates/runtime/chain/benches/: engine_import.rs
crates/runtime/chain/src/: lib.rs
crates/runtime/chain/tests/: import_attestation.rs  import_block.rs  lifecycle.rs  loom_import.rs  produce.rs  sync_chain_adapter.rs  sync_lifecycle.rs  sync_walk.rs
crates/runtime/core/: Cargo.toml  README.md
crates/runtime/core/src/: config.rs  error.rs  lib.rs  lifecycle.rs  node.rs  service.rs
crates/runtime/core/tests/: httpsvc.rs  lifecycle.rs  observability.rs
crates/runtime/duties/: Cargo.toml  README.md
crates/runtime/duties/benches/: local_proposer.rs
crates/runtime/duties/src/: chain_adapter.rs  config.rs  error.rs  lib.rs  ports.rs  proposer.rs  publisher.rs  service.rs  validators.rs  wiring.rs
crates/runtime/duties/tests/: publisher.rs  scheduler.rs
crates/runtime/p2p/: Cargo.toml  README.md  SPLIT.md
crates/runtime/p2p-rpc/: Cargo.toml  README.md
crates/runtime/p2p-rpc/src/: lib.rs
crates/runtime/src/: lib.rs  signing_domain.rs
crates/runtime/sync/: Cargo.toml  README.md
crates/runtime/tests/: api_http.rs  api_httpsvc.rs  api_metrics.rs  chain_import_attestation.rs  chain_import_block.rs  chain_lifecycle.rs  chain_loom_import.rs  chain_produce.rs  chain_sign.rs  core_lifecycle.rs  duties_publisher.rs  duties_scheduler.rs  observability_integration.rs  observability_race.rs  p2p_gossip.rs  p2p_host_build.rs  p2p_rpc.rs  p2p_two_node_interop.rs  sync_chain_adapter.rs  sync_concurrency.rs  sync_initial_sync.rs  sync_lifecycle.rs  sync_walk.rs
crates/ssz/: Cargo.toml  README.md
crates/ssz/src/: decode.rs  encode.rs  error.rs  lib.rs  lists.rs  merkleize.rs  test_support.rs
crates/statetransition/: Cargo.toml
crates/statetransition/src/: error.rs  genesis.rs  helpers.rs  lib.rs  slots.rs  test_fixtures.rs
crates/statetransition/tests/: genesis_parity.rs  slot_processing.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: error.rs  lib.rs  memory.rs  redb_store.rs  store.rs
crates/storage/tests/: contract.rs  fixtures.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: basispt.rs  bitfields.rs  boolean.rs  byte_arrays.rs  bytes.rs  error.rs  lib.rs  ots_key_state.rs  ots_watermark.rs  uint.rs
(+214 files in other folders)
