[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/ssz",
    "crates/config",
    "crates/protocol",
    "crates/forkchoice",
    "crates/storage",
    "crates/networking",
    "crates/runtime",
    "crates/node",
    "crates/lean-cli",
    "crates/fixtures",
    "bin/lean-rust",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.87"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/cyberbono3/lean-rust"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
# `loom` is an opt-in concurrency-model cfg (see lean-chain tests/loom_import.rs);
# register it so the default `-D warnings` build does not flag it as unexpected.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
all         = { level = "deny", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

[workspace.dependencies]
# foundation
# ruint pinned to ~1.12 (>=1.12.0, <1.13.0): narrow pin for resolution stability.
# It once held the workspace MSRV down; that reason retired with the floor bump.
# The pin stays deliberately — widening it is a separate, testable change.
ruint     = { version = "~1.12", features = ["std"] }
# redb pinned to ~2.1 (>=2.1.0, <2.2.0): the embedded DB owns on-disk state, so
# the pin is held for format stability. Per the ruint precedent above.
redb      = "~2.1"
sha2      = "0.10"
thiserror = "2"
anyhow    = "1"

# ssz
ethereum_ssz        = "0.7"
ethereum_ssz_derive = "0.7"

# pq crypto
# Pinned to an exact commit, not a branch or tag: the revision is an interop
# parameter — every client on the network must build against the same one, or
# signatures do not verify across clients and existing keys stop working.
# Declared here only; no member crate consumes it yet, so cargo does not resolve
# it and it contributes nothing to the build. `scripts/check-leansig-pin.sh`
# fails if this ever floats. Scheme parameters are recorded in README.md.
leansig = { git = "https://github.com/leanEthereum/leanSig", rev = "f10dcbefac2502d356d93f686e8b4ecd8dc8840a" }

# async + concurrency
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures     = "0.3"
parking_lot = "0.12"

# net
libp2p = { version = "0.55", features = [
    "tokio",
    "quic",
    "gossipsub",
    "request-response",
    "identify",
    "macros",
    "noise",
    "yamux",
    "ping",
    "secp256k1",
] }
snap = "1"
crc32c = "0.6"

# observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"
time               = "0.3"

# api
axum       = "0.7"
tower      = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
prometheus = "0.13"

# config + cli
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap       = { version = "4", features = ["derive"] }
hex        = "0.4"

# test
proptest          = "1"
insta             = { version = "1", features = ["yaml"] }
wiremock          = "0.6"
tokio-test        = "0.4"
static_assertions = "1"
tempfile          = "3"
serial_test       = "3"
# bench — default-features off drops the heavy plotters/rayon graph; we only
# need the timing harness + criterion_group/main macros.
criterion         = { version = "0.5", default-features = false }

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
debug         = false
strip         = "symbols"

[profile.dev]
opt-level = 0
debug     = true

[profile.test]
opt-level = 0
debug     = true
