[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/ssz",
    "crates/config",
    "crates/crypto",
    "crates/protocol",
    "crates/forkchoice",
    "crates/storage",
    "crates/networking",
    "crates/runtime",
    "crates/node",
    "crates/lean-cli",
    "crates/fixtures",
    "bin/lean-rust",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.87"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/cyberbono3/lean-rust"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
# `loom` is an opt-in concurrency-model cfg (see lean-chain tests/loom_import.rs);
# register it so the default `-D warnings` build does not flag it as unexpected.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
all         = { level = "deny", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

[workspace.dependencies]
# foundation
# ruint widened from ~1.12 to ^1.14: leanSig reaches ruint through
# `ethereum_ssz 0.10 -> alloy-primitives 1.0 -> ruint ^1.14`. Cargo unifies ruint
# to a single 1.x version across the graph, and ~1.12 (<1.13.0) has no overlap
# with ^1.14, so the old pin made `crypto` unable to depend on leanSig at all.
# The narrow pin's original job — holding the workspace MSRV down — retired with
# the toolchain floor bump, so widening costs nothing it was still buying.
#
# The floor is ^1.14, but the resolved version is held at 1.17.2 in Cargo.lock:
# ruint 1.18+ declares rust-version above this workspace's 1.87 floor, and
# `resolver = "2"` is not MSRV-aware, so it would otherwise select 1.19 and fail
# to build. That cap cannot live here — a manifest cannot state both a ^1.14
# floor and a <1.18 ceiling without contradicting the floor leanSig requires —
# so it lives in Cargo.lock, where nothing declares intent.
# `scripts/check-msrv-pins.sh` is what keeps it from drifting, and carries the
# full reasoning alongside the same constraint on ethereum_ssz_derive.
ruint     = { version = "^1.14", features = ["std"] }
# redb pinned to ~2.1 (>=2.1.0, <2.2.0): the embedded DB owns on-disk state, so
# the pin is held for format stability. Per the ruint precedent above.
redb      = "~2.1"
sha2      = "0.10"
thiserror = "2"
anyhow    = "1"

# ssz
ethereum_ssz        = "0.7"
ethereum_ssz_derive = "0.7"

# pq crypto
# Pinned to an exact commit, not a branch or tag: the revision is an interop
# parameter — every client on the network must build against the same one, or
# signatures do not verify across clients and existing keys stop working.
# Declared here only; no member crate consumes it yet, so cargo does not resolve
# it and it contributes nothing to the build. `scripts/check-leansig-pin.sh`
# fails if this ever floats. Scheme parameters are recorded in README.md.
leansig = { git = "https://github.com/leanEthereum/leanSig", rev = "f10dcbefac2502d356d93f686e8b4ecd8dc8840a" }

# async + concurrency
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures     = "0.3"
parking_lot = "0.12"

# net
libp2p = { version = "0.55", features = [
    "tokio",
    "quic",
    "gossipsub",
    "request-response",
    "identify",
    "macros",
    "noise",
    "yamux",
    "ping",
    "secp256k1",
] }
snap = "1"
crc32c = "0.6"

# observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"
time               = "0.3"

# api
axum       = "0.7"
tower      = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
prometheus = "0.13"

# config + cli
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap       = { version = "4", features = ["derive"] }
hex        = "0.4"

# test
proptest          = "1"
# rand 0.9 is not a free choice: leanSig's `key_gen<R: Rng>` takes a rand 0.9
# `Rng`, so the crypto test fixtures must hand it the same major.
rand              = "0.9"
# Portable, reproducible RNG for seed-based key reconstruction (SA5): a persisted
# seed must regenerate the identical key across builds, which rand's `StdRng` does
# not guarantee. Same major as `rand` (rand_core 0.9).
rand_chacha       = "0.9"
insta             = { version = "1", features = ["yaml"] }
wiremock          = "0.6"
tokio-test        = "0.4"
static_assertions = "1"
tempfile          = "3"
serial_test       = "3"
# bench — default-features off drops the heavy plotters/rayon graph; we only
# need the timing harness + criterion_group/main macros.
criterion         = { version = "0.5", default-features = false }

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
debug         = false
strip         = "symbols"

[profile.dev]
opt-level = 0
debug     = true

[profile.test]
opt-level = 0
debug     = true

# Post-quantum signing is optimized in test builds. Without this the crypto suite
# takes ~6 minutes; with it, ~4 seconds. Both halves below are required, and
# measured — each alone is not enough:
#
#   neither override .................. 347s
#   dependencies only ("*") .......... 220s
#   crypto only ........................ 73s
#   both ................................ 4s
#
# Two separate costs are in play. leanSig's own field arithmetic lives in its
# dependency tree, which `"*"` covers. But its `key_gen` and `sign` are generic
# over the signature scheme, so they monomorphize into *this workspace's* codegen
# units and compile at the consuming crate's opt-level — which is why optimizing
# the dependency alone barely moved the number.
#
# Scoped deliberately: `"*"` never applies to workspace members, and the only
# member named is `crypto`, so every other crate keeps opt-level 0 and stays
# debuggable. debug-assertions are left on for `crypto` — the goal is faster
# tests, not fewer checks.
#
# Placed under `test` rather than `dev` on purpose. `profile.test` inherits from
# `profile.dev`, so putting these under `dev` also works (measured: 8s) — but it
# would optimize dependencies for every `cargo build` too, taxing ordinary dev
# iteration for a benefit only the test suite needs.
[profile.test.package."*"]
opt-level = 3

[profile.test.package.crypto]
opt-level = 3

# lean-cli's offline validator keygen calls `crypto::generate::<ProdScheme>`, which
# monomorphizes leanSig's `key_gen` into lean-cli's own codegen units (same reason
# as `crypto` above — `"*"` does not cover workspace members). Without this its
# keygen tests run at opt-level 0 and take minutes.
[profile.test.package.lean-cli]
opt-level = 3
