[package]
name          = "beacon"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "`lean-beacon` binary entry-point (CLI)."

[[bin]]
name = "lean-beacon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
node           = { path = "../node" }
runtime-core   = { path = "../runtime/core" }
runtime-duties = { path = "../runtime/duties" }
runtime-p2p    = { path = "../runtime/p2p" }
config         = { path = "../config" }
protocol       = { path = "../protocol" }
ssz            = { path = "../ssz" }
anyhow         = { workspace = true }
clap           = { workspace = true }
libp2p         = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
