[package]
name          = "beacon"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Deprecated — binary moved to bin/lean-beacon (commit 6.2). Shim awaiting removal in commit 6.3."

[lints]
workspace = true

[dependencies]
