[package]
name          = "config"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Frozen chain constants + devnet0 YAML config (Tier 1)."

[lints]
workspace = true

[dependencies]
