[package]
name          = "crypto"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Sync-core crypto adapter for the leanSig PQ signature scheme (Tier 1). No async/net deps."

[lints]
workspace = true

[dependencies]
types     = { path = "../types" }
leansig   = { workspace = true }
thiserror = { workspace = true }
# SHA-256 for the seed commitment persisted in the durable OTS watermark: a
# one-way binding to the key identity that lets a resume detect a foreign
# record without ever storing the seed itself.
sha2      = { workspace = true }
# rand appears in the public signature of `generate`, so it is a real dependency
# rather than dev-only. The major must match leanSig's: its `key_gen` takes a
# rand 0.9 `Rng`, and handing it a different major would not compile.
rand      = { workspace = true }
# Portable, reproducible RNG (SA5): `generate_from_seed` seeds a ChaCha20 stream so
# a persisted 32-byte seed regenerates the identical key across builds. rand's
# `StdRng` is not stability-guaranteed, so it cannot back a persisted seed.
rand_chacha = { workspace = true }

# Deliberately absent: `ssz`. leanSig implements ethereum_ssz 0.10 while the
# workspace `ssz` crate pins 0.7; naming an ssz trait here would resolve 0.7's
# and collide. All encoding goes through leansig::serialization::Serializable.
# The SA5 record (`types::OtsKeyState`) is fixed-width with inherent byte
# (de)serialization, so it needs no ssz crate and keeps ssz out of this tree.
