[package]
name          = "engine"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Consensus execution boundary: wraps the forkchoice store and sequences import / produce flows (Tier 4)."

[lints]
workspace = true

[dependencies]
types       = { path = "../types" }
protocol    = { path = "../protocol" }
forkchoice  = { path = "../forkchoice" }
ssz         = { path = "../ssz" }
parking_lot = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
