[package]
name          = "engine"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Consensus execution boundary: wraps the forkchoice store and sequences import / produce flows (Tier 4)."

[lints]
workspace = true

[dependencies]
types       = { path = "../types" }
protocol    = { path = "../protocol" }
forkchoice  = { path = "../forkchoice" }
ssz         = { path = "../ssz" }
parking_lot = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[features]
# Re-exports the in-crate fixture builders (`anchor_pair`,
# `engine_at_genesis`, `produce_signed_block`) under `pub mod test_fixtures`
# so downstream crates (`lean-chain`, ...) can drive integration tests
# without duplicating the genesis builders.
test-fixtures = []

[dev-dependencies]
static_assertions = { workspace = true }
