[package]
name          = "engine"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Deprecated — engine moved to lean-chain (commit 3.3). Shim crate awaiting removal in commit 3.4."

[lints]
workspace = true

[dependencies]
