[package]
name          = "fixtures"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Test fixtures and compatibility contracts."

[lints]
workspace = true

[dependencies]
protocol        = { path = "../protocol" }
statetransition = { path = "../statetransition" }
storage         = { path = "../storage" }
types           = { path = "../types" }

[dev-dependencies]
hex            = { workspace = true }
libp2p         = { workspace = true }
lean-duties = { path = "../runtime/duties" }
serde_yaml     = { workspace = true }
ssz            = { path = "../ssz" }
tempfile       = { workspace = true }
