[package]
name          = "fixtures"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Test fixtures and compatibility contracts."

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }
storage  = { path = "../storage" }
types    = { path = "../types" }

[dev-dependencies]
hex            = { workspace = true }
libp2p         = { workspace = true }
runtime = { path = "../runtime" }
serde_yaml     = { workspace = true }
ssz            = { path = "../ssz" }
tempfile       = { workspace = true }
