[package]
name          = "forkchoice"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "LMD-GHOST + 4-phase interval ticking (Tier 3)."

[lints]
workspace = true

[dependencies]
types           = { path = "../types" }
ssz             = { path = "../ssz" }
config          = { path = "../config" }
protocol        = { path = "../protocol" }
statetransition = { path = "../statetransition" }
thiserror       = { workspace = true }

[dev-dependencies]
proptest          = { workspace = true }
static_assertions = { workspace = true }
