[package]
name          = "lean-wire"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Wire codecs + protocol IDs (Tier 4)."

[lints]
workspace = true

[dependencies]
types     = { path = "../types" }
protocol  = { path = "../protocol" }
ssz       = { path = "../ssz" }
sha2      = { workspace = true }
snap      = { workspace = true }
crc32c    = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = "1"
hex               = { workspace = true }
