[package]
name          = "protocol"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Domain consensus types: Block, State, Checkpoint, Vote (Tier 2)."

[lints]
workspace = true

[dependencies]
types     = { path = "../types" }
ssz       = { path = "../ssz" }
config    = { path = "../config" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
