[package]
name          = "runtime"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Runtime shell: lifecycle spine plus chain, sync, duties, p2p, api services and observability, consolidated into a single crate."

[lints]
workspace = true

[features]
# Exposes the in-crate engine fixture builders (`anchor_pair`,
# `engine_at_genesis`, `produce_signed_block`) under
# `runtime::chain::engine::test_fixtures`, plus the validator secret-key
# builders under `runtime::duties::test_fixtures`, so integration tests can
# drive the engine and the sign path without duplicating the setup.
# `rand` is pulled in because the duties fixtures call `crypto::generate`.
test-fixtures = ["dep:rand"]

[dependencies]
storage      = { path = "../storage" }
lean-wire    = { path = "../networking" }
forkchoice   = { path = "../forkchoice" }
protocol     = { path = "../protocol" }
# The runtime boundary is the only permitted in-tree consumer of `crypto`
# (plus the offline `lean-cli` keygen) — signing lives here, never in the
# sync-core consensus crates. See PROJECT-KNOWLEDGE.md → LAYER_RULE.
crypto       = { path = "../crypto" }
ssz          = { path = "../ssz" }
config       = { path = "../config" }
types        = { path = "../types" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
parking_lot  = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
libp2p       = { workspace = true }
hex          = { workspace = true }
snap         = { workspace = true }
serde        = { workspace = true }
serde_yaml   = { workspace = true }
futures      = { workspace = true }
axum         = { workspace = true, features = ["json"] }
prometheus   = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
# Optional, enabled only by `test-fixtures`: `duties::test_fixtures` generates
# validator key material via `crypto::generate`, which needs a `rand::CryptoRng`.
# Absent from a default (production) build.
rand         = { workspace = true, optional = true }
# Normal (not dev) dep: the compile-time wiring proofs in `p2p/wiring.rs`
# gate `cargo check` / `cargo build`, not just tests.
static_assertions = { workspace = true }

[dev-dependencies]
# Self-dep enables the `test-fixtures` feature for integration tests under
# `tests/`. Cargo unifies features across the dep graph, so this turns the
# in-crate `chain::engine::test_fixtures` module on without changing the
# published library surface.
runtime    = { path = ".", features = ["test-fixtures"] }
fixtures   = { path = "../fixtures" }
tokio      = { workspace = true, features = ["test-util"] }
tempfile   = { workspace = true }
criterion  = { workspace = true }
serde_json = "1"
tower      = { version = "0.4", features = ["util"] }
serial_test = { workspace = true }

# loom is pulled ONLY under `--cfg loom`; the default test/clippy build never
# sees it, so VERIFY is unaffected. Opt-in concurrency models live in
# `tests/chain_loom_import.rs` (gated `#![cfg(loom)]`).
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[[bench]]
name    = "engine_import"
harness = false

[[bench]]
name    = "local_proposer"
harness = false
