[package]
name          = "ssz"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "SSZ encode/decode + SHA-256 merkleization facade (Tier 1)."

[lints]
workspace = true

[dependencies]
types     = { path = "../types" }
# `ethereum_ssz` ships its lib as `ssz` (and `ethereum_ssz_derive` as
# `ssz_derive`). Rename via `package = ...` so the extern crate names do
# not collide with this crate's own name (`ssz`). The `version` is kept in
# sync with the workspace pin (`ethereum_ssz = "0.7"`); `package` cannot be
# inherited via `workspace = true` (cargo 1.87 — see workspace docs).
eth_ssz        = { version = "0.7", package = "ethereum_ssz" }
eth_ssz_derive = { version = "0.7", package = "ethereum_ssz_derive" }
sha2      = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex      = { workspace = true }
proptest = { workspace = true }
