[package]
name          = "statetransition"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Pure consensus state machine. Implementation lands in Issues #13–#15 (Tier 3)."

[lints]
workspace = true

[dependencies]
