[package]
name          = "statetransition"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Pure consensus state machine (Tier 3)."

[lints]
workspace = true

[dependencies]
types     = { path = "../types" }
ssz       = { path = "../ssz" }
config    = { path = "../config" }
protocol  = { path = "../protocol" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
