[package]
name          = "storage"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Store trait + in-memory adapter. Implementation lands in a later issue (Tier 4)."

[lints]
workspace = true

[dependencies]
