[package]
name          = "storage"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Persistence trait + in-memory adapter (Tier 4)."

[lints]
workspace = true

[dependencies]
types       = { path = "../types" }
protocol    = { path = "../protocol" }
parking_lot = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
